@@ -2,18 +2,15 @@
     xmlns="http://namespaces.zope.org/zope"
     xmlns:grok="http://namespaces.zope.org/grok"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
-	xmlns:i18n="http://namespaces.zope.org/i18n" 
+	xmlns:i18n="http://namespaces.zope.org/i18n"
+    xmlns:browser="http://namespaces.zope.org/browser"
     i18n_domain="ftw.mail">
 
-    <!-- Include configuration for dependencies listed in setup.py -->
-    <includeDependencies package="." />
-    
+    <include package="plone.app.intid" />
+
     <include file="permissions.zcml" />
 
-	<i18n:registerTranslations directory="locales" /> 
-
-    <!-- Grok the package to initialize schema interfaces and content classes -->
-    <grok:grok package="." />
+	<i18n:registerTranslations directory="locales" />
 
     <!--include file="behaviors.zcml" /-->
 
@@ -25,5 +22,47 @@
         directory="profiles/default"
         provides="Products.GenericSetup.interfaces.EXTENSION"
         />
+
+
+    <!-- Attachment view -->
+    <browser:page
+        for="ftw.mail.mail.IMail"
+        name="get_attachment"
+        class=".attachment.AttachmentView"
+        permission="zope2.View"
+        />
+
+    <!-- Inbound view -->
+    <browser:page
+        for="Products.CMFCore.interfaces.ISiteRoot"
+        name="mail-inbound"
+        class=".inbound.MailInbound"
+        permission="zope2.View"
+        />
+
+
+    <!-- Intid resolver -->
+    <adapter
+        for="ftw.mail.interfaces.IMailInbound"
+        factory=".inbound.DestinationFromIntId"
+        provides="ftw.mail.interfaces.IDestinationResolver"
+        />
+
+
+    <!-- SearchableTextExtender -->
+    <adapter
+        for="ftw.mail.mail.IMail"
+        factory=".mail.SearchableTextExtender"
+        />
+
+
+    <!-- ftw.mail.Mail default view -->
+    <browser:page
+        for="ftw.mail.mail.IMail"
+        name="view"
+        class=".mail.View"
+        permission="zope2.View"
+        />
+
 
 </configure>
