@@ -5,6 +5,12 @@ Changelog
 1.0.5 (unreleased)
 ------------------
 
+- Ungrock the package.
+  [mathias.leimgruber]
+
+- Fix test setup for plone 4.3 and intid.
+  [mathias.leimgruber]
+
 - Add plone 4.3.x tests cfg and development.cfg.
   [mathias.leimgruber]
 
